--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,2 +1,25 @@
 
-<a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
+<p><a routerLink="/admin/products/new" class="btn btn-primary">New Product</a></p>
+
+<p><input
+        #query
+        (keyup)="filter(query.value)"
+        type="text" class="form-control" placeholder="Search"></p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Product</th>
+            <th>Price</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let p of filterProducts">
+            <td>{{ p.data.name }}</td>
+            <td>{{ p.data.price | currency }}</td>
+            <td>
+                <a [routerLink]="['/admin/products/', p.pid]">Edit</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
