--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -41,12 +41,6 @@
     </form>
   </div>
   <div class="col-md-6">
-    <div *ngIf="product.name" class="card">
-      <img class="card-img-top" [src]="product.image" *ngIf="product.image">
-      <div class="card-body">
-        <h5 class="card-title">{{ product.name }}</h5>
-        <p class="card-text">{{ product.price | currency }}</p>
-      </div>
-    </div>
+    <app-product-card [product]="product" [show-actions]="false"></app-product-card>
   </div>
 </div>
