--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,16 @@
-<p>
-  products works!
-</p>
+
+<div class="row">
+  <div class="col-lg-3 col-md-4">
+    <app-product-filter [category]="category"></app-product-filter>
+  </div>
+  <div class="col-lg-9 col-md-8">
+    <div class="row">
+      <ng-container *ngFor="let p of filteredProducts">
+        <div class="col-lg-4 col-md-6">
+          <app-product-card [product]="p.data"></app-product-card>
+        </div>
+      </ng-container>
+    </div>
+  </div>
+</div>
+
