clean up and refactor product components and interface

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -7,7 +7,7 @@
     <div class="row">
       <ng-container *ngFor="let p of filteredProducts">
         <div class="col-lg-4 col-md-6">
-          <app-product-card [product]="p.data"></app-product-card>
+          <app-product-card [product]="p"></app-product-card>
         </div>
       </ng-container>
     </div>
