--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -4,23 +4,13 @@
     <h5 class="card-title">{{ product.name }}</h5>
     <p class="card-text">{{ product.price | currency }}</p>    
   </div>
-  <div *ngIf="showActions" class="card-footer">
+  <div *ngIf="showActions && shoppingCart" class="card-footer">
     <button 
-      *ngIf="getQuantity() === 0; else updateQuantity"
+      *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
       (click)="addToCart()"
       class="btn btn-secondary btn-sm btn-block">Add to Cart</button>
       <ng-template #updateQuantity>
-        <div class="row no-gutters">
-          <div class="col-8">
-            In Cart: {{ getQuantity() }}
-          </div>
-          <div class="col-2 pr-1">
-            <button (click)="removeFromCart(product)" class="btn btn-secondary btn-sm btn-block font-weight-bold">-</button>
-          </div>
-          <div class="col-2 pl-1">
-            <button (click)="addToCart()" class="btn btn-secondary btn-sm btn-block font-weight-bold">+</button>
-          </div>
-        </div>
+        <app-product-quantity [product]="product" [shopping-cart]="shoppingCart"></app-product-quantity>
       </ng-template>
   </div>
 </div>
