--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,7 +4,7 @@
     <app-product-filter [category]="category"></app-product-filter>
   </div>
   <div class="col-lg-9 col-md-8">
-    <div class="row">
+    <div class="row" *ngIf="cart$ | async as cart">
       <ng-container *ngFor="let p of filteredProducts">
         <div class="col-lg-4 col-md-6">
           <app-product-card [product]="p" [shopping-cart]="cart"></app-product-card>
