--- a/src/app/core/components/app-navbar/app-navbar.component.html
+++ b/src/app/core/components/app-navbar/app-navbar.component.html
@@ -25,7 +25,7 @@
               </li>
             </ng-template>
             <li ngbDropdown *ngIf="appUser; else anonymousUser" class="nav-item dropdown">
-              <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ appUser.name }}</a>
+              <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ appUser.displayName }}</a>
               <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
                 <ng-container *ngIf="appUser.isAdmin">
