--- a/src/app/shopping/components/my-orders/my-orders.component.html
+++ b/src/app/shopping/components/my-orders/my-orders.component.html
@@ -2,7 +2,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Customer</th>
+      <th>Order</th>
       <th>Date</th>
       <th></th>
     </tr>
@@ -12,7 +12,7 @@
       <td>{{ order.shipping.name }}</td>
       <td>{{ order.datePlaced | date}}</td>
       <td>
-        <a href="#">View</a>
+        <a href="#">View Details</a>
       </td>
     </tr>
   </tbody> 
