--- a/src/app/shopping/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping/components/shopping-cart/shopping-cart.component.html
@@ -1,11 +1,11 @@
 <h1>Shopping Cart</h1>
-<div *ngIf="cart$ | async as cart">
+<div *ngIf="cart$ | async as cart" class="clearfix">
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping cart.
     <button 
       *ngIf="cart.items.length" 
       (click)="clearCart()" 
-      class="btn btn-light btn-sm">Clear Shopping Cart</button>
+      class="btn btn-light btn-sm float-right">Clear Shopping Cart</button>
   </p>
   <table class="table">
     <thead>
@@ -36,6 +36,5 @@
   <a 
     *ngIf="cart.items.length"
     routerLink="/check-out"
-    class="btn btn-primary">Check Out</a>
-  
+    class="btn btn-primary float-right">Check Out</a>  
 </div>
