fix quantity bug

--- a/src/app/shared/components/product-quantity/product-quantity.component.html
+++ b/src/app/shared/components/product-quantity/product-quantity.component.html
@@ -6,7 +6,7 @@
     class="pr-1" 
     [ngClass]="{'col-3': shoppingCartList, 'col-2': !shoppingCartList}">
     <button 
-      (click)="removeFromCart(product)" 
+      (click)="removeFromCart()" 
       class="btn btn-info btn-sm btn-block font-weight-bold">-</button>
   </div>
   <div 
