--- a/src/app/shared/components/product-quantity/product-quantity.component.html
+++ b/src/app/shared/components/product-quantity/product-quantity.component.html
@@ -7,13 +7,13 @@
     [ngClass]="{'col-3': shoppingCartList, 'col-2': !shoppingCartList}">
     <button 
       (click)="removeFromCart()" 
-      class="btn btn-info btn-sm btn-block font-weight-bold">-</button>
+      class="btn btn-info btn-sm btn-block font-weight-bold"><i class="fa fa-minus" aria-hidden="true"></i></button>
   </div>
   <div 
     class="pl-1" 
     [ngClass]="{'col-3': shoppingCartList, 'col-2': !shoppingCartList}">
     <button 
       (click)="addToCart()" 
-      class="btn btn-info btn-sm btn-block font-weight-bold">+</button>
+      class="btn btn-info btn-sm btn-block font-weight-bold"><i class="fa fa-plus" aria-hidden="true"></i></button>
   </div>
 </div>
