--- a/src/app/shopping/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping/components/shopping-cart/shopping-cart.component.html
@@ -12,7 +12,7 @@
       <tr>
         <th style="width: 100px;"></th>
         <th>Product</th>
-        <th style="width: 140px;">Quantity</th>
+        <th style="width: 180px;">Quantity</th>
         <th class="text-right" style="width:300px;">Price</th>
       </tr>
     </thead>
@@ -36,5 +36,5 @@
   <a 
     *ngIf="cart.items.length"
     routerLink="/check-out"
-    class="btn btn-primary float-right">Check Out</a>  
+    class="btn btn-info float-right">Check Out</a>  
 </div>
